@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 project (miniupnpc C)
 set (MINIUPNPC_VERSION 1.9)
-set (MINIUPNPC_API_VERSION 12)
+set (MINIUPNPC_API_VERSION 13)
 
 if (NOT CMAKE_BUILD_TYPE)
   if (WIN32)
