@@ -1,5 +1,9 @@
-$Id: Changelog.txt,v 1.203 2015/04/27 15:50:19 nanard Exp $
+$Id: Changelog.txt,v 1.206 2015/05/22 10:23:47 nanard Exp $
 miniUPnP client Changelog.
+
+2015/05/22:
+  add searchalltypes param to upnpDiscoverDevices()
+  increments API_VERSION to 13
 
 2015/04/30:
   upnpc: output version on the terminal
